# suji-some

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build.sh  buildspec.yml
codebuild/: buildspec.yml  deployspec.yml
projects/sfx-server/: .gitignore  Dockerfile  Makefile  README.md  buildspec.yml
projects/sfx-server-api/: .gitignore  CMakeLists.txt  README.md  main.cpp
projects/sfx-server-api/src/: http_connection.cc  main.cc
projects/sfx-server-api/src/config/aws/: appconfig.cpp  appconfig.h  init.cpp
projects/sfx-server-api/src/database/postgresql/: init.h  pq.cpp  pq.h
projects/sfx-server-api/src/handlers/: index.cpp
projects/sfx-server-api/src/markdown/: markdown.cpp
projects/sfx-server-api/src/models/: article.cpp  article.h
projects/sfx-server-api/src/server/: http_connection.cc  http_connection.h  state.cc  state.h
projects/sfx-server-api/src/server/handlers/: index.cpp  index.h  sitemap.cpp  sitemap.h
projects/sfx-server-api/src/services/config/aws/: appconfig.cpp  appconfig.h  init.cpp  init.h
projects/sfx-server-api/src/services/database/postgresql/: init.cpp  pq.cpp  pq.h
projects/sfx-server-api/src/services/markdown/: markdown.cpp  markdown.h
projects/sfx-server-api/src/utils/: datetime.cpp  md5.cc  md5.h
projects/sfx-server-api/static/: index.html
projects/sfx-server/cmds/proxy/: config.go  go.mod  go.sum  main.go
projects/sfx-server/cmds/server/: go.mod  go.sum  main.go
projects/sfx-server/cmds/server/application/: application.go  service.go
projects/sfx-server/cmds/server/config/: appconfig.go  assets.go  config.go
projects/sfx-server/cmds/server/server/: dev.go  minify.go  server.go
projects/sfx-web/: .eslintrc.js  .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
projects/sfx-web/public/: file-download.html  file-download.js
projects/sfx-web/public/styles/: fonts.css
projects/sfx-web/public/wasm/: qt-canvas.js
projects/sfx-web/src/: index.scss  index.tsx
projects/sfx-web/src/components/: Clock.svelte  card.svelte  go-top.tsx  hello.svelte  my-element.ts  usercard.ts
projects/sfx-web/src/pages/: pages.scss
projects/sfx-web/src/pages/about/: about.scss
projects/sfx-web/src/pages/account/: account-page.tsx  account.scss  edit-page.tsx  personal-page.tsx
projects/sfx-web/src/pages/article/: article.scss  edit-page.tsx  new-page.tsx  read-page.tsx  save.ts
projects/sfx-web/src/pages/calendar/: calendar.scss  calendar.tsx
projects/sfx-web/src/pages/exception/: not-found.tsx  render.tsx  unauthorized.tsx
projects/sfx-web/src/pages/home/: home.scss
projects/sfx-web/src/pages/post/: post.scss  post.tsx
projects/sfx-web/src/pages/todo/: todo.scss  todo.tsx
projects/sfx-web/src/pages/user/: info-page.tsx  user.scss
projects/sfx-web/src/pages/utils/: md5.svelte  md5.tsx  random-password.tsx  timestamp.svelte  timestamp.tsx  utils.scss
projects/sfx-web/src/services/: account.ts  post.ts  session.ts
projects/sfx-web/src/styles/: base.scss  controls.scss  media.scss  navtop.scss
projects/sfx-web/src/types/: types.d.ts
projects/sfx-web/src/utils/: config.ts  file-download.js  fluentui.ts  helpers.ts  media.ts  qtloader.js  qtloader.ts  request.ts  wasmloader.ts
projects/some_clion/: CMakeLists.txt  README.md
projects/some_clion/libraries/: libsome_api.h
projects/some_clion/src/: main.cpp
projects/some_clion/src/cmain/: main.c
projects/some_clion/src/cppmain/: main.cpp
projects/some_library/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
projects/some_server/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go
projects/some_server/application/: application.go
projects/some_server/clibs/some/: foo.c  foo.h
projects/some_server/config/: config.go
projects/some_server/db/pg/: docker-compose.yml
projects/some_server/server/: dev.go  server.go  utils.go
projects/some_server/server/handlers/: index.go  new.go  show.go
projects/some_server/server/middleware/: auth.go  jwt.go  middleware.go
projects/some_server/server/models/: article.go
projects/some_server/server/storesvc/: store.go
projects/some_server/server/utils/: aes.go  snowid.go  utils.go
projects/some_server/web/templates/: article.html  client.html  headmeta.html  index.html
projects/some_web/: .eslintrc.js  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
projects/some_web/public/styles/: fonts.css
projects/some_web/src/: custom.d.ts  index.scss  main.scss  main.tsx
projects/some_web/src/components/: components.tsx
projects/some_web/src/css/: demo.scss  fonts.css  show.scss
projects/some_web/src/js/: App.tsx
projects/some_web/src/pages/: article.scss  article.tsx  index.scss  index.tsx  main.scss  main.tsx
projects/some_web/src/services/: account.ts  article.ts  quest.ts  session.ts
projects/some_web/src/styles/: base.scss  navtop.scss
projects/some_web/src/utils/: config.ts  fluentui.ts  helpers.ts  highlight.ts  request.ts  webcom.ts
projects/some_web/src/views/: random-password.tsx  views.tsx
(+203 files in other folders)
